<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/limite"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/edtLimitSpend"
            android:textSize="30sp"
            android:inputType="number"
            android:digits="1234567890."
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/holo_red_light"
            android:hint="@string/ex"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_btn"
            android:id="@+id/btLimitSpend"
            android:text="@string/save"
            android:textSize="20sp" />





    </LinearLayout>

</RelativeLayout>